--- a/src/app/nzdemo-layout/nzdemo-layout.component.html
+++ b/src/app/nzdemo-layout/nzdemo-layout.component.html
@@ -1,3 +1,44 @@
-<p>
-  nzdemo-layout works!
-</p>
+<nz-layout class="layout">
+
+  <nz-header>
+    <div class="header-title">AntAngularDemo</div>
+  </nz-header>
+
+  <nz-layout class="layout-container">
+    <nz-sider [nzWidth]="200">
+      <ul nz-menu [nzMode]="'inline'" style="height:100%">
+        <li nz-submenu>
+          <span title><i class="anticon anticon-user"></i>General</span>
+          <ul>
+            <li nz-menu-item>Button按钮</li>
+            <li nz-menu-item>Icon图标</li>
+          </ul>
+        </li>
+        <li nz-submenu>
+          <span title><i class="anticon anticon-laptop"></i>subnav 2</span>
+          <ul>
+            <li nz-menu-item>option5</li>
+            <li nz-menu-item>option6</li>
+            <li nz-menu-item>option7</li>
+            <li nz-menu-item>option8</li>
+          </ul>
+        </li>
+        <li nz-submenu>
+          <span title><i class="anticon anticon-notification"></i>subnav 3</span>
+          <ul>
+            <li nz-menu-item>option9</li>
+            <li nz-menu-item>option10</li>
+            <li nz-menu-item>option11</li>
+            <li nz-menu-item>option12</li>
+          </ul>
+        </li>
+      </ul>
+    </nz-sider>
+
+    <nz-layout class="layout-content">
+      <nz-content>Content</nz-content>
+    </nz-layout>
+
+  </nz-layout>
+
+</nz-layout>
