--- a/src/app/nzdemo-grid/nzdemo-grid.component.html
+++ b/src/app/nzdemo-grid/nzdemo-grid.component.html
@@ -1,3 +1,224 @@
-<div class="app-nzdemo-grid">
-  
+<div class="app-nzdemo-grid basic-example">
+
+  <div nz-row>
+    <div nz-col [nzSpan]="12">
+      col-12
+    </div>
+    <div nz-col [nzSpan]="12">
+      col-12
+    </div>
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="8">
+      col-8
+    </div>
+    <div nz-col [nzSpan]="8">
+      col-8
+    </div>
+    <div nz-col [nzSpan]="8">
+      col-8
+    </div>
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="6">
+      col-6
+    </div>
+    <div nz-col [nzSpan]="6">
+      col-6
+    </div>
+    <div nz-col [nzSpan]="6">
+      col-6
+    </div>
+    <div nz-col [nzSpan]="6">
+      col-6
+    </div>
+  </div>
+
+</div>
+
+
+<div class="app-nzdemo-grid gutter-example">
+
+  <div nz-row [nzGutter]="20">
+    <div nz-col class="gutter-row" [nzSpan]="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" [nzSpan]="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" [nzSpan]="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+    <div nz-col class="gutter-row" [nzSpan]="6">
+      <div class="gutter-box">col-6</div>
+    </div>
+  </div>
+
+</div>
+
+
+<div class="app-nzdemo-grid offset-example">
+
+  <div nz-row>
+    <div nz-col [nzSpan]="8">
+      col-8
+    </div>
+    <div nz-col [nzSpan]="8" [nzOffset]="8">
+      col-8
+    </div>
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="6" [nzOffset]="6">
+      col-6 col-offset-6
+    </div>
+    <div nz-col [nzSpan]="6" [nzOffset]="6">
+      col-6 col-offset-6
+    </div>
+  </div>
+  <div nz-row>
+    <div nz-col [nzSpan]="12" [nzOffset]="6">
+      col-12 col-offset-6
+    </div>
+  </div>
+
+</div>
+
+<div class="app-nzdemo-grid push-example">
+
+  <div nz-row>
+    <div nz-col [nzSpan]="18" [nzPush]="6">
+      col-18 col-push-6
+    </div>
+    <div nz-col [nzSpan]="6" [nzPull]="18">
+      col-6 col-pull-18
+    </div>
+  </div>
+
+</div>
+
+<div class="app-nzdemo-grid flex-example">
+  <p>sub-element align left</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'start'">
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+  </div>
+  <p>sub-element align center</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'center'">
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+  </div>
+  <p>sub-element align right</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'end'">
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+  </div>
+  <p>sub-element monospaced arrangement</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'space-between'">
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+  </div>
+  <p>sub-element align full</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'space-around'">
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+    <div nz-col [nzSpan]="4">
+      col-4
+    </div>
+  </div>
+</div>
+
+
+<div class="app-nzdemo-grid flex-align-example">
+  <p>Align Top</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'center'" [nzAlign]="'top'">
+    <div nz-col [nzSpan]="4">
+      <p class="height-100">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-50">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-120">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-80">col-4</p>
+    </div>
+  </div>
+  <p>Align Center</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'space-around'" [nzAlign]="'middle'">
+    <div nz-col [nzSpan]="4">
+      <p class="height-100">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-50">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-120">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-80">col-4</p>
+    </div>
+  </div>
+  <p>Align Bottom</p>
+  <div nz-row [nzType]="'flex'" [nzJustify]="'space-between'" [nzAlign]="'bottom'">
+    <div nz-col [nzSpan]="4">
+      <p class="height-100">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-50">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-120">col-4</p>
+    </div>
+    <div nz-col [nzSpan]="4">
+      <p class="height-80">col-4</p>
+    </div>
+  </div>
 </div>
