--- a/src/app/nzdemo-breadcrumb/nzdemo-breadcrumb.component.html
+++ b/src/app/nzdemo-breadcrumb/nzdemo-breadcrumb.component.html
@@ -1,3 +1,47 @@
-<p>
-  nzdemo-breadcrumb works!
-</p>
+<div class="app-nzdemo-breadcrumb">
+  <nz-breadcrumb>
+    <nz-breadcrumb-item>
+      Home
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href="">Application Center</a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href="">Application List</a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      An Application
+    </nz-breadcrumb-item>
+  </nz-breadcrumb>
+</div>
+
+<div class="app-nzdemo-breadcrumb">
+  <nz-breadcrumb>
+    <nz-breadcrumb-item>
+      <i class="anticon anticon-home"></i>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href=""><i class="anticon anticon-user"></i><span>Application List</span></a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href="">Application</a>
+    </nz-breadcrumb-item>
+  </nz-breadcrumb>
+</div>
+
+<div class="app-nzdemo-breadcrumb">
+  <nz-breadcrumb [nzSeparator]="'>'">
+    <nz-breadcrumb-item>
+      Home
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href="">Application Center</a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      <a href="">Application List</a>
+    </nz-breadcrumb-item>
+    <nz-breadcrumb-item>
+      An Application
+    </nz-breadcrumb-item>
+  </nz-breadcrumb>
+</div>
