--- a/src/app/nzdemo-menu/nzdemo-menu.component.html
+++ b/src/app/nzdemo-menu/nzdemo-menu.component.html
@@ -1,3 +1,72 @@
-<p>
-  nzdemo-menu works!
-</p>
+<div class="app-nzdemo-menu">
+  <ul nz-menu [nzMode]="'horizontal'">
+    <li nz-menu-item><i class="anticon anticon-mail"></i> Navigation One</li>
+    <li nz-menu-item nzDisabled><i class="anticon anticon-appstore"></i> Navigation Two</li>
+    <li nz-submenu>
+      <span title><i class="anticon anticon-setting"></i> Navigation Three - Submenu</span>
+      <ul>
+        <li nz-menu-group>
+          <span title>Item 1</span>
+          <ul>
+            <li nz-menu-item>Option 1</li>
+            <li nz-menu-item>Option 2</li>
+          </ul>
+        </li>
+        <li nz-menu-group>
+          <span title>Item 2</span>
+          <ul>
+            <li nz-menu-item>Option 3</li>
+            <li nz-menu-item>Option 4</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li nz-menu-item><a href="https://ng.ant.design" target="_blank" rel="noopener noreferrer">Navigation Four - Link</a></li>
+  </ul>
+</div>
+
+<div class="app-nzdemo-menu-inline">
+  <ul nz-menu [nzMode]="'inline'" style="width: 240px;">
+    <li nz-submenu>
+      <span title><i class="anticon anticon-mail"></i> Navigation One</span>
+      <ul>
+        <li nz-menu-group>
+          <span title>Item 1</span>
+          <ul>
+            <li nz-menu-item>Option 1</li>
+            <li nz-menu-item>Option 2</li>
+          </ul>
+        </li>
+        <li nz-menu-group>
+          <span title>Item 2</span>
+          <ul>
+            <li nz-menu-item>Option 3</li>
+            <li nz-menu-item>Option 4</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title><i class="anticon anticon-appstore"></i> Navigation Two</span>
+      <ul>
+        <li nz-menu-item>Option 5</li>
+        <li nz-menu-item>Option 6</li>
+        <li nz-submenu>
+          <span title>Submenu</span>
+          <ul>
+            <li nz-menu-item>Option 7</li>
+            <li nz-menu-item>Option 8</li>
+          </ul>
+        </li>
+      </ul>
+    </li>
+    <li nz-submenu>
+      <span title><i class="anticon anticon-setting"></i> Navigation Three</span>
+      <ul>
+        <li nz-menu-item>Option 9</li>
+        <li nz-menu-item>Option 10</li>
+        <li nz-menu-item>Option 11</li>
+      </ul>
+    </li>
+  </ul>
+</div>
